@@ -1,3 +1,8 @@
+2012-12-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* local/cf-ppc-macosx.mk: created for Mac OS X 10.5 PPC machine
+	  generating universal-apple-macosx snapshots
+
 2012-08-17 Borut Razem <borut.razem AT gmail.com>
 
 	* local/wizard.mk: renamed, removed fsigned-char since sdcc now
